# sirgraf

./: .gitignore  README.md  __init__.py  background.py  main.py  pyproject.toml  requirements.txt
sirgraf/: __init__.py  background.py  cli.py  core.py  instruments.py  io.py  main.py  mask.py  polar.py  visualize.py
tests/: test_background.py  test_main.py  test_smoke.py
