[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sirgraf"
version = "0.1.0"
description = "Simple Radial Gradient Filter"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
  "astropy",
  "sunpy>=5.1",
  "opencv-python",
  "scikit-image",
  "moviepy",
]

[project.scripts]
sirgraf-plot = "sirgraf.cli:main_plot"
sirgraf-animate = "sirgraf.cli:main_animate"